--- a/src/_includes/_base/_footer.pug
+++ b/src/_includes/_base/_footer.pug
@@ -32,7 +32,7 @@ footer.l-footer
               a.p-sitemap__item(href=`${relativePath}entry`)
                 p.p-sitemap__txt Entry
             li.p-sitemap__divider
-              a.p-sitemap__item(href=`https://kyotokojohokenkai.jp/policy/` target="_blank")
+              a.p-sitemap__item(href=`${relativePath}assets/pdf/privacy_policy.pdf` target="_blank")
                 p.p-sitemap__txt Privacy Policy
   div.l-footer__bottom
     div.l-footer__container
