--- a/src/_includes/_template/_gnav.pug
+++ b/src/_includes/_template/_gnav.pug
@@ -26,4 +26,4 @@ nav.p-gnav#js-gnav
     li.p-gnav__divider
       a.p-gnav__item.js-gnav__item(href=`${relativePath}entry`)
         span.p-gnav__item__eng ENTRY
-        span.p-gnav__item__jp 応募フォーム
+        span.p-gnav__item__jp エントリーフォーム
