--- a/src/about/index.pug
+++ b/src/about/index.pug
@@ -82,7 +82,7 @@ block content
         span.p-title__ruby 社長の挨拶
       div.c-grid.c-grid--1-2.u-mt5.u-sp-mt3
         div.u-w-full
-          img.u-w-full(src=`https://placehold.jp/333x444.png`, alt="村山 勝")
+          img.u-w-full(src=`${relativePath}assets/img/page/about/president.webp`, alt="代表取締役社長 村山 勝")
         div.u-pl4.u-pr2.u-sp-pr0.u-sp-pl0
           p.u-txt-size-l.u-txt-bold 社長の挨拶
           div.c-sentence.u-mt2.u-sp-mt1
@@ -115,7 +115,7 @@ block content
           dd.p-dl-list__dd
             ul.c-list
               li.c-list__item ・一般財団法人 京都工場保健会のシステム開発
-              li.c-list__item ・一般社団法人 全国健康増進協議会のシステム開発
+              li.c-list__item ・一般社団法人 A団体のシステム開発
               li.c-list__item ・関係する健診機関のシステム開発
               li.c-list__item ・システム開発のサポート
               li.c-list__item ・新規システムの開発・販売・サポート
@@ -133,7 +133,7 @@ block content
             img.p-place__header-img(src=`${relativePath}assets/img/page/about/place-card-01.webp` alt="本社")
           div.p-place__body
             p.p-place__name 本社
-            p.p-place__addr 〒604-8472M<br>京都市中京区西ノ京<br>北壺井町67番地
+            p.p-place__addr 〒604-8472<br>京都市中京区西ノ京<br>北壺井町67番地
         li.p-place__item
           div.p-place__header
             img.p-place__header-img(src=`${relativePath}assets/img/page/about/place-card-02.webp` alt="宇治")
