--- a/src/assets/css/object/project/_sitemap.scss
+++ b/src/assets/css/object/project/_sitemap.scss
@@ -83,7 +83,7 @@
   font-weight: bold;
   text-transform: uppercase;
 }
-@media print, screen and (min-width: global.$breakpoint-min-md) {
-  .p-sitemap__txt {
-  }
-}
+// @media print, screen and (min-width: global.$breakpoint-min-md) {
+//   .p-sitemap__txt {
+//   }
+// }
