--- a/src/development/index.pug
+++ b/src/development/index.pug
@@ -98,9 +98,9 @@ block content
             li.c-list__item ・データヘルス システム
             li.c-list__item ・保健指導管理システム
             li.c-list__item ・契約管理システム
-            li.c-list__item ・一般社団法人全国健康増進協議会 結果報告システム
-            li.c-list__item ・一般社団法人全国健康増進協議会 次期システム開発
-            li.c-list__item ・一般財団法人淳風会 次期システム開発
-            li.c-list__item ・医療法人社団同友会 特殊健康診断システム ライセンス提供
+            li.c-list__item ・一般社団法人 A団体 結果報告システム
+            li.c-list__item ・一般社団法人 A団体 次期システム開発
+            li.c-list__item ・一般財団法人 B団体 次期システム開発
+            li.c-list__item ・医療法人社団 C団体 特殊健康診断システム ライセンス提供
             li.c-list__item ・全国健康保険協会(協会けんぽ) 資格管理システム
             li.c-list__item ・事業場要望による各種システムの開発
