--- a/src/entry/confirm.pug
+++ b/src/entry/confirm.pug
@@ -22,7 +22,7 @@ block content
           a.p-breadcrumbs__item(href=`${relativePath}`) TOP
         li.p-breadcrumbs__try-divider
         li.p-breadcrumbs__divider
-          p.p-breadcrumbs__item 応募フォーム
+          p.p-breadcrumbs__item エントリーフォーム
 
   //- **********************************************************************
   //- キービジュアル
@@ -30,7 +30,7 @@ block content
   div.l-kv.t-bg-gray-light.u-pt6.u-sp-pt2
     div.p-kv-title.u-mt0
       h1.p-kv-title__item Entry
-      p.p-kv-title__item-sub 募集フォーム
+      p.p-kv-title__item-sub エントリーフォーム
 
   div#js-header-trg
   //- **********************************************************************
@@ -45,7 +45,7 @@ block content
 
       div.p-form.u-mt5.u-sp-mt3
         h2.p-recruitment-inner__title ENTRY FORM / 
-          span.p-recruitment-inner__title-strong 応募フォーム
+          span.p-recruitment-inner__title-strong エントリーフォーム
 
         table.p-form__table.u-mt5.u-sp-mt3
           //{loop:$params}
