--- a/src/entry/index.pug
+++ b/src/entry/index.pug
@@ -22,7 +22,7 @@ block content
           a.p-breadcrumbs__item(href=`${relativePath}`) TOP
         li.p-breadcrumbs__try-divider
         li.p-breadcrumbs__divider
-          p.p-breadcrumbs__item 応募フォーム
+          p.p-breadcrumbs__item エントリーフォーム
 
   //- **********************************************************************
   //- キービジュアル
@@ -33,7 +33,7 @@ block content
         img.js-ofi(src=`${relativePath}assets/img/kv/entry-kv-image.webp` alt="")
     div.p-kv-title
       h1.p-kv-title__item Entry
-      p.p-kv-title__item-sub 募集フォーム
+      p.p-kv-title__item-sub エントリーフォーム
 
   div#js-header-trg
   //- **********************************************************************
@@ -62,7 +62,7 @@ block content
 
         div.p-form.u-mt5.u-sp-mt3
           h2.p-recruitment-inner__title ENTRY FORM / 
-            span.p-recruitment-inner__title-strong 応募フォーム
+            span.p-recruitment-inner__title-strong エントリーフォーム
 
           table.p-form__table.u-mt5.u-sp-mt3
             tr.p-form__tr
@@ -170,4 +170,4 @@ block content
                   label.radio-label(for='radio-new_graduate') 新卒採用
 
         div.p-form__btn.u-mt7.u-sp-mt3
-          input.p-form__btn-input(type="submit" value="応募フォームへ")
+          input.p-form__btn-input(type="submit" value="送信する")
