--- a/src/index.pug
+++ b/src/index.pug
@@ -127,7 +127,7 @@ block content
                 | 社員の幸福と成長をサポートします。
       div.p-btn.p-btn--blue-fill.u-w30.u-sp-w-full.u-mt4.u-sp-mt3
         a.p-btn__inner(href=`${relativePath}entry`)
-          span.p-btn__txt 応募フォームへ
+          span.p-btn__txt エントリーフォームへ
 
   //- **********************************************************************
   //- フッターバナー
@@ -142,8 +142,8 @@ block content
         li.p-footer-bnr__divider
           a.p-footer-bnr__item.p-footer-bnr__item-welfare(href=`${relativePath}welfare`)
             h2.p-title.u-txt-align-center Welfare
-              span.p-title__ruby 募集要項
+              span.p-title__ruby 福利厚生
         li.p-footer-bnr__divider
           a.p-footer-bnr__item.p-footer-bnr__item-entry(href=`${relativePath}entry`)
             h2.p-title.u-txt-align-center Entry
-              span.p-title__ruby 応募フォーム
+              span.p-title__ruby エントリーフォーム
