--- a/src/recruitment/index.pug
+++ b/src/recruitment/index.pug
@@ -89,23 +89,24 @@ block content
         dt.p-dl-list__dt 勤務時間
         dd.p-dl-list__dd 8:30-17:30
         dt.p-dl-list__dt 給与
-        dd.p-dl-list__dd 調整中
+        dd.p-dl-list__dd モデルケース<br>大卒  28才  時間外20H ＝ 314,429円<br>※ 経験・能力判定により基本給等を別途設定いたします。
         dt.p-dl-list__dt 昇給・賞与
-        dd.p-dl-list__dd 調整中
+        dd.p-dl-list__dd 昇給  ：  年1回予定　能力成果により判断<br>賞与  ：  年2回予定　業績反映
         dt.p-dl-list__dt 加入保険
         dd.p-dl-list__dd 健康・厚生・雇用・労災
         dt.p-dl-list__dt 福利厚生
-        dd.p-dl-list__dd 確定拠出年金（401K）制度
+        dd.p-dl-list__dd 確定拠出年金（401K）制度（導入予定）
         dt.p-dl-list__dt 休日
-        dd.p-dl-list__dd 完全週休2日制（土曜日・日曜日）<br>休日祝祭日・夏季・年末年始・冬季・お盆<br>（2023年度年間休日130日）
+        dd.p-dl-list__dd 完全週休2日制（土曜日・日曜日）<br>休日祝祭日・年末年始・お盆<br>（2023年度年間休日130日）
         dt.p-dl-list__dt 休暇
-        dd.p-dl-list__dd 年次有給休暇（初年度１０日、２年目以降＋１～２日、最高保有日数２０日）
+        dd.p-dl-list__dd 年次有給休暇  ：<br>初年度  入社後半年経過時点  10日、2年目以降  ＋1～2日、最高保有日数  年40日※前年繰越含む<br>
+          |個別取得休暇（有給）：<br>年間11日※法定の年次有給とは別途支給
         dt.p-dl-list__dt 休業制度
         dd.p-dl-list__dd 育児休業、介護休業
     
     div.p-btn.p-btn--light-blue.u-mt6.u-sp-mt3.u-w30
       a.p-btn__inner(href=`${relativePath}entry`)
-        span.p-btn__txt 応募フォームへ
+        span.p-btn__txt エントリーフォームへ
       
   //- **********************************************************************
   //- 新卒採用
@@ -132,20 +133,21 @@ block content
         dt.p-dl-list__dt 勤務時間
         dd.p-dl-list__dd 8:30-17:30
         dt.p-dl-list__dt 給与
-        dd.p-dl-list__dd 調整中
+        dd.p-dl-list__dd 大卒 ＝ 253,000円<br>専門学校卒 ＝ 207,000円
         dt.p-dl-list__dt 昇給・賞与
-        dd.p-dl-list__dd 調整中
+        dd.p-dl-list__dd 昇給  ：  年1回予定　能力成果により判断<br>賞与  ：  年2回予定　業績反映
         dt.p-dl-list__dt 加入保険
         dd.p-dl-list__dd 健康・厚生・雇用・労災
         dt.p-dl-list__dt 福利厚生
-        dd.p-dl-list__dd 確定拠出年金（401K）制度
+        dd.p-dl-list__dd 確定拠出年金（401K）制度（導入予定）
         dt.p-dl-list__dt 休日
-        dd.p-dl-list__dd 完全週休2日制（土曜日・日曜日）<br>休日祝祭日・夏季・年末年始・冬季・お盆<br>（2023年度年間休日130日）
+        dd.p-dl-list__dd 完全週休2日制（土曜日・日曜日）<br>休日祝祭日・年末年始・お盆<br>（2023年度年間休日130日）
         dt.p-dl-list__dt 休暇
-        dd.p-dl-list__dd 年次有給休暇（初年度１０日、２年目以降＋１～２日、最高保有日数２０日）
+        dd.p-dl-list__dd 年次有給休暇  ：<br>初年度  入社後半年経過時点  10日、2年目以降  ＋1～2日、最高保有日数  年40日※前年繰越含む<br>
+          |個別取得休暇（有給）：<br>年間11日※法定の年次有給とは別途支給
         dt.p-dl-list__dt 休業制度
         dd.p-dl-list__dd 育児休業、介護休業
     
     div.p-btn.p-btn--light-blue.u-mt6.u-sp-mt3.u-w30
       a.p-btn__inner(href=`${relativePath}entry`)
-        span.p-btn__txt 応募フォームへ
+        span.p-btn__txt エントリーフォームへ
