--- a/src/_includes/_base/_header-sub.pug
+++ b/src/_includes/_base/_header-sub.pug
@@ -16,9 +16,9 @@ header.l-header.l-header--sub#js-header
     //-
     include /_includes/_template/_gnav
     //-
-    div.p-btn.p-btn--light-blue.p-btn--header.u-w20.u-sp-w14
+    div.p-btn.p-btn--light-blue.p-btn--header.u-w20.u-sp-w15
       a.p-btn__inner(href=`${relativePath}entry`)
-        span.p-btn__txt 応募フォームへ
+        span.p-btn__txt エントリーフォームへ
     //-
     div.p-hamburger#js-gnav-trg
       div.p-hamburger__container
