--- a/src/entry/finish.pug
+++ b/src/entry/finish.pug
@@ -22,7 +22,7 @@ block content
           a.p-breadcrumbs__item(href=`${relativePath}`) TOP
         li.p-breadcrumbs__try-divider
         li.p-breadcrumbs__divider
-          p.p-breadcrumbs__item 応募フォーム
+          p.p-breadcrumbs__item エントリーフォーム
 
   //- **********************************************************************
   //- キービジュアル
@@ -30,7 +30,7 @@ block content
   div.l-kv.t-bg-gray-light.u-pt6.u-sp-pt2
     div.p-kv-title.u-mt0
       h1.p-kv-title__item Entry
-      p.p-kv-title__item-sub 募集フォーム
+      p.p-kv-title__item-sub エントリーフォーム
 
   div#js-header-trg
   //- **********************************************************************
